tests/snapshots/cases/run@switch.rv.snap
---
source: tests/snapshots.rs
input_file: tests/cases/switch.rv
---
exit: Some(0)
--- stdout
20
30
40
100
6000
3
