tests/snapshots/cases/run@use_statements.rv.snap
---
source: tests/snapshots.rs
input_file: tests/cases/use_statements.rv
---
exit: Some(0)
--- stdout
2
3
4
5
6
